# Gamefynx

./: .gitignore  CMakeLists.txt  README.md
Core/inc/: CPU.h  Cartouche.h  Emulator.h  MMU.h
Core/src/: CPU.cpp  Cartouche.cpp  Emulator.cpp  MMU.cpp
inc/: Def.h  Shader.h  UI.h
inc/glad/: glad.h
shaders/: shader.fs
src/: UI.cpp  glad.cpp  main.cpp
